[package]
name = "inc-20210825"
version = "0.1.0"
authors = ["Trent Nelson <trent@solana.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.0"
solana-account-decoder = "1.7.10"
solana-client = "1.7.10"
solana-sdk = "1.7.10"
spl-token = "3.2.0"
