[package]
name = "inc-20210825"
version = "0.1.0"
authors = ["Trent Nelson <trent@solana.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bs58 = "0.4.0"
clap = "2.33.0"
serde = { version = "1.0.129", features = ["derive"] }
serde_json = "1.0.66"
solana-account-decoder = "1.7.10"
solana-clap-utils = "1.7.10"
solana-client = "1.7.10"
solana-cli-config = "1.7.10"
solana-remote-wallet = "1.7.10"
solana-sdk = "1.7.10"
solana-transaction-status = "1.7.10"
spl-token = "3.2.0"
